# 2D-Game

./: Bullet.cpp  Bullet.h  CMakeLists.txt  Collisione.cpp  Collisione.h  Doxyfile  Enemy.cpp  Enemy.h  Game  Gioco.cpp  Main.cpp  Makefile  Player.cpp  Player.h  ProgettoMake  README.md  Sfondo.cpp  Sfondo.h  Shield.cpp  Shield.h  console.txt  object.h
CMake/: Makefile  Makefile~
doc/html/: Bullet_8cpp.html  Bullet_8h.html  Bullet_8h_source.html  Collisione_8cpp.html  Collisione_8h.html  Collisione_8h_source.html  Enemy_8cpp.html  Enemy_8h.html  Enemy_8h_source.html  Gioco_8cpp.html  Main_8cpp.html  Player_8cpp.html  Player_8h.html  Player_8h_source.html  Sfondo_8cpp.html  Sfondo_8h.html  Sfondo_8h_source.html  Shield_8cpp.html  Shield_8h.html  Shield_8h_source.html  annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  object_8h.html  object_8h_source.html  structBullet-members.html  structBullet.html  structEnemy-members.html  structEnemy.html  structSfondo-members.html  structSfondo.html  structShield-members.html  (+3 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_2.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  files_2.js  files_3.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  search.js  variables_0.js  variables_1.js  variables_2.js  (+6 more)
